# rax

./: .gitignore  JAX_README.md  README.md  pyproject.toml  setup.py  test_with_rax.py  test_without_rax.py
rax/: __init__.py  __main__.py  cli.py  example_model.py  monkeypatch.py  runner.py  validator.py
test_env/: pyvenv.cfg
