[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rax"
version = "0.1.0"
description = "A safer, compiler-like JAX frontend with shape/type safety"
authors = [{name = "RAX Team"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "jaxtyping>=0.2.0",
    "beartype>=0.15.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
rax = "rax.cli:main"

[project.urls]
"Homepage" = "https://github.com/viraatdas/rax"
"Bug Tracker" = "https://github.com/viraatdas/rax/issues"

[tool.setuptools.packages.find]
include = ["rax*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100 
